Agregando mas cambios del blog

--- a/blog.html
+++ b/blog.html
@@ -104,7 +104,7 @@
                                 data-translate="navTrabaja">Empleo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
+                            <a class="nav-link" href="blog.html" data-translate="navBlog">BLOG</a>
                         </li>
                         <li>
                             <div class="d-flex align-items-center gap-3">
@@ -313,7 +313,7 @@
                 <div class="col-lg-4 col-md-6 col-12 blog-card-item">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/article1.jpg" alt="Artículo 1">
+                            <img src="img/blog/css_vs_flexbox.jpg" alt="Artículo 1">
                         </div>
                         <div class="featured-card-body">
                             <p class="article-date">05 Feb 2025</p>
@@ -336,7 +336,7 @@
                 <div class="col-lg-4 col-md-6 col-12 blog-card-item">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/article2.jpg" alt="Artículo 2">
+                            <img src="img/blog/etiquetas_meta_seo_blog.png" alt="Artículo 2">
                         </div>
                         <div class="featured-card-body">
                             <p class="article-date">20 Ene 2025</p>
