--- a/blog_paginas/pagina1.html
+++ b/blog_paginas/pagina1.html
@@ -31,7 +31,7 @@
     <link rel="apple-touch-icon" href="../img/logo_GISEA.png">
 
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/fontawesome/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="../css/aos/aos.css">
     <link rel="stylesheet" href="../css/glightbox/glightbox.min.css">
     <link rel="stylesheet" href="../css/swiper/swiper-bundle.min.css">
@@ -248,7 +248,7 @@
                 <div class="col-md-4 col-sm-6 blog-card-item">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/blog1.jpg" alt="Artículo relacionado">
+                            <img src="../img/blog/mito_fullstack.png" alt="Artículo relacionado">
                         </div>
                         <div class="featured-card-body">
                             <h4 class="article-title"><a href="post_ejemplo.html">El Mito del Fullstack
@@ -263,7 +263,7 @@
                 <div class="col-md-4 col-sm-6 blog-card-item">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/blog2.jpg" alt="Artículo relacionado">
+                            <img src="../img/blog/astro_js_blog.png" alt="Artículo relacionado">
                         </div>
                         <div class="featured-card-body">
                             <h4 class="article-title"><a href="post_ejemplo.html">¿Vale la pena aprender Astro?</a>
@@ -276,11 +276,11 @@
                 <div class="col-md-4 col-sm-6 blog-card-item">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/blog3.jpg" alt="Artículo relacionado">
+                            <img src="../img/blog/etiquetas_meta_seo_blog.png" alt="Artículo relacionado">
                         </div>
                         <div class="featured-card-body">
-                            <h4 class="article-title"><a href="post_ejemplo.html">Vue vs React en 2025</a></h4>
-                            <p class="article-desc">Comparamos rendimiento, curva de aprendizaje y comunidad...</p>
+                            <h4 class="article-title"><a href="post_ejemplo.html">Mejores prácticas en SEO para mejorar el ranking web</a></h4>
+                            <p class="article-desc">Aprende cómo optimizar meta tags, estructura y contenido para motores de búsqueda.</p>
                         </div>
                     </div>
                 </div>
@@ -306,11 +306,11 @@
                 <!-- ⭐ Calificación -->
                 <div class="rating-container d-flex align-items-center gap-2">
                     <div class="stars" id="rating-stars">
-                        <i class="fa-solid fa-star star" data-value="1"></i>
-                        <i class="fa-solid fa-star star" data-value="2"></i>
-                        <i class="fa-solid fa-star star" data-value="3"></i>
-                        <i class="fa-solid fa-star star" data-value="4"></i>
-                        <i class="fa-solid fa-star star" data-value="5"></i>
+                        <i class="fa-regular fa-star star" data-value="1"></i>
+                        <i class="fa-regular fa-star star" data-value="2"></i>
+                        <i class="fa-regular fa-star star" data-value="3"></i>
+                        <i class="fa-regular fa-star star" data-value="4"></i>
+                        <i class="fa-regular fa-star star" data-value="5"></i>
                     </div>
                     <span class="rating-count" id="rating-count-text">4.2 / 15 votos</span>
                 </div>
@@ -405,7 +405,6 @@
     <script src="../js/index.js"></script>
     <script src="../js/aos/aos.js"></script>
     <script src="../js/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="../js/fontawesome/all.min.js"></script>
     <script src="../js/glightbox/glightbox.min.js"></script>
     <script src="../js/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script src="../js/isotope-layout/isotope.pkgd.min.js"></script>
