Agregando los cambios de blog y dos secciones mas

--- a/blog.html
+++ b/blog.html
@@ -216,21 +216,19 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1200">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/blog/css_vs_flexbox.jpg" alt="css vs flexbox">
+                            <img src="img/blog/etiquetas_meta_seo_blog.png" alt="css vs flexbox">
                         </div>
                         <div class="featured-card-body">
                             <p class="article-date">10 Oct 2025</p>
                             <h5 class="article-title">
-                                <a href="#">CSS Grid vs. Flexbox: La Batalla de los Layouts Modernos</a>
+                                <a href="#">Mejores prácticas en SEO para mejorar el ranking web</a>
                             </h5>
                             <p class="article-desc">
-                                ¿Cuándo usar uno y cuándo el otro? Comprende la diferencia clave entre maquetación 1D y
-                                2D para construir interfaces responsivas sin esfuerzo.
+                                Aprende cómo optimizar meta tags, estructura y contenido para motores de búsqueda.
                             </p>
                             <div class="article-tags">
-                                <span class="tag">CSS</span>
-                                <span class="tag">Layout</span>
-                                <span class="tag">Frontend</span>
+                                <span class="tag">SEO</span>
+                                <span class="tag">Marketing Digital</span>
                             </div>
                         </div>
                     </div>
@@ -358,7 +356,7 @@
                 <div class="col-lg-4 col-md-6 col-12 blog-card-item">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/article3.jpg" alt="Artículo 3">
+                            <img src="img/blog/img_default_blog.png" alt="Artículo 3">
                         </div>
                         <div class="featured-card-body">
                             <p class="article-date">15 Dic 2024</p>
@@ -381,7 +379,7 @@
                 <div class="col-lg-4 col-md-6 col-12 blog-card-item">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/article4.jpg" alt="Artículo 4">
+                            <img src="img/blog/img_default_blog.png" alt="Artículo 4">
                         </div>
                         <div class="featured-card-body">
                             <p class="article-date">28 Nov 2024</p>
@@ -403,7 +401,7 @@
                 <div class="col-lg-4 col-md-6 col-12 blog-card-item">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/article5.jpg" alt="Artículo 5">
+                            <img src="img/blog/img_default_blog.png" alt="Artículo 5">
                         </div>
                         <div class="featured-card-body">
                             <p class="article-date">10 Nov 2024</p>
@@ -425,7 +423,7 @@
                 <div class="col-lg-4 col-md-6 col-12 blog-card-item">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/article6.jpg" alt="Artículo 6">
+                            <img src="img/blog/img_default_blog.png" alt="Artículo 6">
                         </div>
                         <div class="featured-card-body">
                             <p class="article-date">25 Oct 2024</p>
@@ -446,7 +444,7 @@
                 <div class="col-lg-4 col-md-6 col-12 blog-card-item">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/article7.jpg" alt="Artículo 7">
+                           <img src="img/blog/img_default_blog.png" alt="Artículo 7">
                         </div>
                         <div class="featured-card-body">
                             <p class="article-date">02 Feb 2025</p>
@@ -467,7 +465,7 @@
                 <div class="col-lg-4 col-md-6 col-12 blog-card-item">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/article8.jpg" alt="Artículo 8">
+                            <img src="img/blog/img_default_blog.png" alt="Artículo 8">
                         </div>
                         <div class="featured-card-body">
                             <p class="article-date">28 Ene 2025</p>
