--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                                 data-translate="navTrabaja">Trabaja con <br> Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
+                            <a class="nav-link" href="./blog.html" data-translate="navBlog">BLOG</a>
                         </li>
                         <li>
                             <div class="d-flex align-items-center gap-3">
