--- a/servicios_gisea/negocios_pequenos.html
+++ b/servicios_gisea/negocios_pequenos.html
@@ -108,10 +108,10 @@
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-translate="navTrabaja">Empleo</a>
+                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Empleo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
+                            <a class="nav-link" href="../blog.html" data-translate="navBlog">BLOG</a>
                         </li>
                         <li>
                             <div class="d-flex align-items-center gap-3">
