Agregando cambio de idioma cards nuestro equipo

--- a/blog.html
+++ b/blog.html
@@ -216,12 +216,12 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1200">
                     <div class="featured-card">
                         <div class="featured-card-image">
-                            <img src="img/blog/etiquetas_meta_seo_blog.png" alt="css vs flexbox">
+                            <img src="img/blog/etiquetas_meta_seo_blog.png" alt="Mejores Practicas SEO">
                         </div>
                         <div class="featured-card-body">
                             <p class="article-date">10 Oct 2025</p>
                             <h5 class="article-title">
-                                <a href="#">Mejores prácticas en SEO para mejorar el ranking web</a>
+                                <a href="./blog_paginas/pagina2.html">Mejores prácticas en SEO para mejorar el ranking web</a>
                             </h5>
                             <p class="article-desc">
                                 Aprende cómo optimizar meta tags, estructura y contenido para motores de búsqueda.
@@ -339,7 +339,7 @@
                         <div class="featured-card-body">
                             <p class="article-date">20 Ene 2025</p>
                             <h5 class="article-title">
-                                <a href="#">Mejores prácticas en SEO para mejorar el ranking web</a>
+                                <a href="./blog_paginas/pagina2.html">Mejores prácticas en SEO para mejorar el ranking web</a>
                             </h5>
                             <p class="article-desc">
                                 Aprende cómo optimizar meta tags, estructura y contenido para motores de búsqueda.
