--- a/about.html
+++ b/about.html
@@ -232,7 +232,7 @@
                                 <img class="profile-card-avatar" src="img/team/lia_garrido1.PNG"
                                     alt="Lia Garrido - CEO GISEA" />
                                 <h1 class="profile-card-fullname">Lia Garrido</h1>
-                                <h2 class="profile-card-jobtitle">Directora de Desarrollo Visual</h2>
+                                <h2 class="profile-card-jobtitle" data-translate="liaJobTitle">Directora de Desarrollo Visual</h2>
                             </div>
                             <div class="profile-card-main">
                                 <div class="profile-card-section is-active" id="about-lia">
